--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ dj-static==0.0.6
 Django==3.0.5
 gunicorn==20.0.4
 Pillow==7.1.1
+pkg-resources==0.0.0
 psycopg2-binary==2.8.5
 pytils==0.3
 pytz==2019.3
 sqlparse==0.3.1
 static3==0.7.0
+whitenoise==5.0.1
